Added hover effect on artciles and additional styling on the nav bar

--- a/inde.html
+++ b/inde.html
@@ -47,7 +47,7 @@
 
             <section id="content">
                 <a href="https://developer.ryalto.group/blog/2022/rails-github-actions.html">
-                    <article class="first_blog_entry">
+                    <article>
                         <header>Migrating to GitHub Actions for Rails CI</header>
                         <p>RubyCI is tragically shutting down, so I'm migrating to GitHub Actions for Rails CI</p>
                         <p class="author"><i class="fa-solid fa-user-astronaut right-padding"></i>Phil</p>
@@ -137,7 +137,7 @@
                 </a>
 
                 <a href="https://developer.ryalto.group/blog/2022/theme-toggle.html">
-                    <article class="last_blog_entry">
+                    <article>
                         <header>Simple Javascript Theme Toggle</header>
                         <section>
                             <p></p>
