--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
                     <a href="https://developer.ryalto.group/" id="logo-container">
                         <img src="ryalto-logo-lg.png" alt="Ryalto Logo" id="logo" />
                     </a>
-                    <ul>
-                        <li><a href="https://developer.ryalto.group/">blog</a></li>
-                        <li><a href="https://developer.ryalto.group/team">our team</a></li>
-                        <li><a href="https://developer.ryalto.group/careers">careers</a></li>
+                    <ul class="link-container">
+                        <li><a href="https://developer.ryalto.group/" class="nav-link">blog</a></li>
+                        <li><a href="https://developer.ryalto.group/team" class="nav-link">our team</a></li>
+                        <li><a href="https://developer.ryalto.group/careers" class="nav-link">careers</a></li>
                     </ul>
                 </nav>
 
@@ -39,9 +39,10 @@
                         </section>
                         <p>
                             We're really proud of our Tech Team here at Ryalto. This is a page for us to share what
-                            we're getting up to in the background! Gary, please can you think of some better words to
-                            put here!
+                            we're getting up to in the background!
                         </p>
+                        <p></p>
+                        <p>Gary, please can you think of some better words to put here!</p>
                     </section>
                 </article>
             </header>
